front end for user to add more email addresses

--- a/application/modules/default/views/scripts/settings/partials/email.phtml
+++ b/application/modules/default/views/scripts/settings/partials/email.phtml
@@ -80,7 +80,7 @@ span.label.attention {
 <div class="panel-heading">
     <h4 class="panel-title">
         <a data-toggle="collapse" href="#email-collapse" data-parent="#accordion" id="email-trigger">
-            <span class="glyphicon glyphicon-globe"></span>
+            <span class="glyphicon glyphicon-envelope"></span>
             <?= $this->translate('Your Emails') ?>
             <span class="absolute glyphicon glyphicon-chevron-down"></span>
         </a>
