chagnes for gihub account

--- a/application/modules/default/views/scripts/settings/index.phtml
+++ b/application/modules/default/views/scripts/settings/index.phtml
@@ -83,16 +83,21 @@ $this->tab = 'settings';
                                 <?php echo $this->render('settings/partials/profile.phtml'); ?>
                             </section>
                             <!-- /edit profile -->
-                            <!-- edit profile -->
+                            <!-- edit emails -->
                             <section class="panel panel-default" id="form-email">
                                 <?php echo $this->render('settings/partials/email.phtml'); ?>
                             </section>
-                            <!-- /edit profile -->
+                            <!-- /edit emails -->
                             <!-- edit payments -->
                             <section class="panel panel-default" id="form-payment">
                                 <?php echo $this->render('settings/partials/payment.phtml'); ?>
                             </section>
                             <!-- /edit payments -->
+                            <!-- edit github -->
+                            <section class="panel panel-default" id="form-github">
+                                <?php echo $this->render('settings/partials/github.phtml'); ?>
+                            </section>
+                            <!-- /edit github -->
                             <!-- edit connceted accounts -->
                             <section class="panel panel-default" id="form-connected-accounts">
                                 <?php echo $this->render('settings/partials/accounts.phtml'); ?>
