--- a/application/modules/default/views/scripts/settings/partials/email.phtml
+++ b/application/modules/default/views/scripts/settings/partials/email.phtml
@@ -81,7 +81,7 @@ span.label.attention {
     <h4 class="panel-title">
         <a data-toggle="collapse" href="#email-collapse" data-parent="#accordion" id="email-trigger">
             <span class="glyphicon glyphicon-envelope"></span>
-            <?= $this->translate('Your Emails') ?>
+            <?= $this->translate('Emails') ?>
             <span class="absolute glyphicon glyphicon-chevron-down"></span>
         </a>
     </h4>
