--- a/application/modules/default/views/scripts/settings/partials/github.phtml
+++ b/application/modules/default/views/scripts/settings/partials/github.phtml
@@ -33,7 +33,7 @@
 <div class="panel-collapse collapse" id="github-collapse">
     <div class="panel-body">
         <form class="standard-form partial well" action="<?= $this->github->getAction(); ?>"
-              method="<?= $this->github->getMethod(); ?>" data-target="#form-connected-github"
+              method="<?= $this->github->getMethod(); ?>" data-target="#form-github"
               data-trigger="#github-trigger">
             <div class="row">
                 <div class="col-md-4 col-lg-4 col-sm-4 col-xs-4">
