--- a/application/modules/backend/views/scripts/categories/index.phtml
+++ b/application/modules/backend/views/scripts/categories/index.phtml
@@ -75,6 +75,18 @@
             </div>
         </div>
         <div class="jtable-input-field-container">
+            <div class="jtable-input-label">XDG-Type</div>
+            <div class="jtable-input jtable-text-input">
+                <input class="" id="subcat-xdg" name="xdg_type" type="text">
+            </div>
+        </div>
+        <div class="jtable-input-field-container">
+            <div class="jtable-input-label">Legacy Name</div>
+            <div class="jtable-input jtable-text-input">
+                <input class="" id="subcat-legacy" name="name_legacy" type="text">
+            </div>
+        </div>
+        <div class="jtable-input-field-container">
             <div class="jtable-input-label">Status</div>
             <div class="jtable-input jtable-dropdown-input">
                 <select id="subcat-status" name="is_active" class="validate[required]">
@@ -192,8 +204,10 @@
 
                     $('#TableContainer').jtable('addRecord', {
                         record: {
-                            "title": title.val(),
-                            "is_active": status.val(),
+                            "title": $("#subcat-title").val(),
+                            "is_active": $("#subcat-status").val(),
+                            "name_legacy": $("#subcat-legacy").val(),
+                            "xdg_type": $("#subcat-xdg").val(),
                             "rgt": sendPostId
                         }
                     });
@@ -368,11 +382,15 @@
                 xdg_type: {
                     title: 'XDG-Type',
                     type: 'input',
+                    create: true,
+                    edit: true,
                     width: '30%'
                 },
                 name_legacy: {
                     title: 'Legacy Name',
                     type: 'input',
+                    create: true,
+                    edit: true,
                     width: '30%'
                 },
                 is_active: {
