--- a/application/modules/default/views/scripts/partials/flashMessage.phtml
+++ b/application/modules/default/views/scripts/partials/flashMessage.phtml
@@ -1,5 +1,5 @@
 <?php if (Zend_Controller_Action_HelperBroker::getStaticHelper('flashMessenger')->hasCurrentMessages()) : ?>
-    <div class="pull-left" style="width: 100%">
+    <div id="flash-message" class="pull-left" style="width: 100%;">
     <?php foreach (Zend_Controller_Action_HelperBroker::getStaticHelper('flashMessenger')
                        ->getCurrentMessages() as $message) : ?>
         <div class="alert alert-warning" style="width: 100%;">
