--- a/application/modules/default/views/scripts/partials/htmlheader.phtml
+++ b/application/modules/default/views/scripts/partials/htmlheader.phtml
@@ -19,9 +19,9 @@
  *    You should have received a copy of the GNU Affero General Public License
  *    along with this program.  If not, see <http://www.gnu.org/licenses/>.
  **/
-?>
-<?= $this->headTitle(); ?>
-<?= $this->headMeta(); ?>
-<?= $this->headLink(); ?>
-<?= $this->headStyle(); ?>
-<?= $this->headScript(); ?>
+
+echo $this->headTitle();
+echo $this->headMeta();
+echo $this->headLink();
+echo $this->headStyle();
+echo $this->headScript();
