--- a/application/modules/default/views/scripts/user/products.phtml
+++ b/application/modules/default/views/scripts/user/products.phtml
@@ -448,6 +448,8 @@ $this->inlineScript()->appendScript(
                         } else {
                         	deletePploadFileBtnPerFile = deletePploadFileBtn;
                         }
+                        var numDownloads = this.downloaded_count;
+                        numDownloads = numDownloads || 0;
 
                         $modalPpload.find('table[data-ppload-files] tbody').append(
                             '<tr data-ppload-file-id="' + this.id + '" data-ppload-file-category="' + fileCategory + '" data-ppload-file-tags="' + fileTags + '">'
@@ -468,7 +470,7 @@ $this->inlineScript()->appendScript(
                             + '<td>' + this.created_timestamp + '</td>'
                             
                             + '<td style="text-align: right">' + humanFileSize(this.size) + '</td>'
-                            + '<td style="text-align: right">' + this.downloaded_count + '</td>'
+                            + '<td style="text-align: right">' + numDownloads + '</td>'
                             + '<td>' + deletePploadFileBtnPerFile + '</td>'
                             + '</tr>'
                         );
