issue: sidebar empty on some categories

--- a/application/modules/backend/views/layout/layout.phtml
+++ b/application/modules/backend/views/layout/layout.phtml
@@ -30,7 +30,7 @@ $userRoleName = $helperUserRole->userRole();
 
     <!-- Loading Bootstrap -->
     <link href="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css" rel="stylesheet">
-    <link href="//maxcdn.bootstrapcdn.com/font-awesome/4.2.0/css/font-awesome.min.css" rel="stylesheet">
+    <link href="//maxcdn.bootstrapcdn.com/font-awesome/4.6.3/css/font-awesome.min.css" rel="stylesheet" integrity="sha384-T8Gy5hrqNKT+hzMclPo118YTQO6cYprQmhrYwIiQ/3axmI1hQomh7Ud2hPOy8SP1" crossorigin="anonymous">
     <link href="/theme/backend/css/bootstrap/bootstrap-formhelpers.css" rel="stylesheet">
     <link href="/theme/backend/css/backend.css" rel="stylesheet" type="text/css"/>
 
