--- a/application/modules/default/views/layout/flat_ui_template.phtml
+++ b/application/modules/default/views/layout/flat_ui_template.phtml
@@ -44,6 +44,7 @@
     <link href="/theme/flatui/css/ui.fancytree.min.css" rel="stylesheet" type="text/css">
     <link href="/theme/flatui/css/jquery.step.css" rel="stylesheet">
     <link rel="stylesheet" href="/theme/flatui/css/bootstrap/bootstrap-dialog.min.css" type="text/css" media="screen"/>
+    <link href="//maxcdn.bootstrapcdn.com/font-awesome/4.6.3/css/font-awesome.min.css" rel="stylesheet" integrity="sha384-T8Gy5hrqNKT+hzMclPo118YTQO6cYprQmhrYwIiQ/3axmI1hQomh7Ud2hPOy8SP1" crossorigin="anonymous">
 
     <link rel="SHORTCUT ICON" href="<?=$this->template['favicon']?>"/>
 
@@ -55,9 +56,6 @@
     <script src="//code.jquery.com/jquery-1.11.2.min.js"></script>
     <script src="//maxcdn.bootstrapcdn.com/bootstrap/3.3.4/js/bootstrap.min.js"></script>
     <script src="//cdnjs.cloudflare.com/ajax/libs/angular.js/1.3.15/angular.min.js"></script>
-
-    <script src="https://use.fontawesome.com/92ae23fcf4.js"></script>
-
 </head>
 <body>
 <?php echo $this->render('partials/header/template.phtml'); ?>
