--- a/application/modules/default/views/layout/home_template.phtml
+++ b/application/modules/default/views/layout/home_template.phtml
@@ -40,6 +40,7 @@
 
     <!-- third party -->
     <link href="/theme/flatui/css/colorbox.css" media="screen" rel="stylesheet" type="text/css"/>
+    <link href="//maxcdn.bootstrapcdn.com/font-awesome/4.6.3/css/font-awesome.min.css" rel="stylesheet" integrity="sha384-T8Gy5hrqNKT+hzMclPo118YTQO6cYprQmhrYwIiQ/3axmI1hQomh7Ud2hPOy8SP1" crossorigin="anonymous">
 
     <link rel="shortcut icon" type="image/x-icon" href="<?=$this->template['favicon']?>"/>
 
@@ -53,9 +54,6 @@
     <!-- Add fancyBox -->
 
     <script type="text/javascript" src="/tools/fancybox2.1.4/jquery.fancybox.pack.js?v=2.1.4"></script>
-
-    <script src="https://use.fontawesome.com/92ae23fcf4.js"></script>
-
 </head>
 <body class="home-page">
 
