--- a/application/modules/default/views/scripts/widget/render.phtml
+++ b/application/modules/default/views/scripts/widget/render.phtml
@@ -24,7 +24,7 @@
 <head>
     <meta charset="utf-8">
     <link href="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css" rel="stylesheet">
-    <link href="//maxcdn.bootstrapcdn.com/font-awesome/4.2.0/css/font-awesome.min.css" rel="stylesheet">
+    <link href="//maxcdn.bootstrapcdn.com/font-awesome/4.6.3/css/font-awesome.min.css" rel="stylesheet" integrity="sha384-T8Gy5hrqNKT+hzMclPo118YTQO6cYprQmhrYwIiQ/3axmI1hQomh7Ud2hPOy8SP1" crossorigin="anonymous">
     <link href="/theme/flatui/css/bootstrap/colorpicker/css/bootstrap-colorpicker.min.css" rel="stylesheet">
     <link href="/theme/flatui/css/stylesheet.css" rel="stylesheet">
 
