--- a/application/modules/default/views/scripts/error/error.phtml
+++ b/application/modules/default/views/scripts/error/error.phtml
@@ -20,7 +20,8 @@
  *    along with this program.  If not, see <http://www.gnu.org/licenses/>.
  **/
 
-$users = $this->newUsers($limit = 216,'created_at','DESC');
+$helperUsers = new Default_View_Helper_NewUsers();
+$users = $helperUsers->newUsers($limit = 216,'created_at','DESC');
 $buildMemberUrl = new Default_View_Helper_BuildMemberUrl();
 $helperImage = new Default_View_Helper_Image();
 ?>  <!-- new code -->
