add numbers in tabs

--- a/application/modules/default/views/scripts/product/index.phtml
+++ b/application/modules/default/views/scripts/product/index.phtml
@@ -170,7 +170,7 @@ $productFileInfos = $this->projectFiles($this->product->ppload_collection_id);
                                                </a>
                                            </li>
                                        <?php } ?>
-                                        <li><a href="#files-panel" data-toggle="tab">Files (<?php  if($productFileInfos['fileCount']>0) {echo '('.$productFileInfos['fileCount'].')'; } ?>)</a></li>
+                                        <li><a href="#files-panel" data-toggle="tab">Files <?php  if($productFileInfos['fileCount']>0) {echo '('.$productFileInfos['fileCount'].')'; } ?></a></li>
                                        <li><a href="#donations-panel" data-toggle="tab">Supporters <?php if(count($this->supporting)>0) { echo '('.count($this->supporting).')';} ?></a></li>
                                         
                                    </ul>
