--- a/application/modules/default/views/scripts/authorization/registerError.phtml
+++ b/application/modules/default/views/scripts/authorization/registerError.phtml
@@ -21,7 +21,7 @@
  **/
 ?>
 <!-- Modal -->
-<div id="thank-you-overlay" class="modal fade hide" tabindex="-1" role="dialog" aria-labelledby="myModalLabel"
+<div id="thank-you-overlay" class="modal fade " tabindex="-1" role="dialog" aria-labelledby="myModalLabel"
      aria-hidden="true">
     <div class="modal-dialog content-modal">
         <div class="modal-content">
@@ -30,8 +30,9 @@
                 <h3 id="myModalLabel" class="center"><?= $this->translate('Error') ?></h3>
             </div>
             <div class="modal-body">
-                <div
-                    class="center"><?= $this->translate('Either your e-mail was already verified, or the link was manipulated.') ?></div>
+                <div class="center">
+                    <?=$this->registerErrMsg?>
+                </div>
                 <p class="small center">&nbsp;</p>
 
                 <div class="center"><a href="/" class="btn btn-native btn-min-width"><?= $this->translate('Home') ?></a>
