--- a/application/modules/default/views/scripts/authorization/partials/registerForm.phtml
+++ b/application/modules/default/views/scripts/authorization/partials/registerForm.phtml
@@ -43,9 +43,8 @@
         <div class="form-group has-feedback"><?= $this->formRegister->mail ?></div>
         <div class="form-group has-feedback"><?= $this->formRegister->password1 ?></div>
         <div class="form-group has-feedback"><?= $this->formRegister->password2 ?></div>
-        <?php /** <div class="form-group has-feedback"><?= $this->formRegister->realHuman ?></div>**/?>
-        <div class="g-recaptcha" id="g-recaptcha"></div>
-        
+        <div class="form-group has-feedback"><?= $this->formRegister->realHuman?></div>
+
         <?= $this->formRegister->login ?>
     </form>
 
