--- a/application/modules/default/views/scripts/authorization/registerError.phtml
+++ b/application/modules/default/views/scripts/authorization/registerError.phtml
@@ -21,8 +21,7 @@
  **/
 ?>
 <!-- Modal -->
-<div id="thank-you-overlay" class="modal fade " tabindex="-1" role="dialog" aria-labelledby="myModalLabel"
-     aria-hidden="true">
+<div id="thank-you-overlay" class="modal fade " tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
     <div class="modal-dialog content-modal">
         <div class="modal-content">
             <div class="modal-header">
