updated back end store categories sort order

--- a/application/modules/backend/views/scripts/storecategories/index.phtml
+++ b/application/modules/backend/views/scripts/storecategories/index.phtml
@@ -33,7 +33,7 @@
             jqueryuiTheme: true,
             paging: true,
             sorting: true,
-            defaultSorting: 'store_id asc',
+            defaultSorting: 'store_id asc, order asc',
             title: 'Table of category configuration for stores',
             actions: {
                 listAction: '/backend/storecategories/list',
